finish desktop design & added screenshot of desktop and mobile version

--- a/index.html
+++ b/index.html
@@ -35,68 +35,65 @@
     </p>
    </div>
    <div class="col-2">
-    <div class="h4"><span class="star"><img src="images/icon-star.svg" alt=""><img src="images/icon-star.svg"
+    <div class="h4 one"><span class="star"><img src="images/icon-star.svg" alt=""><img src="images/icon-star.svg"
        alt=""><img src="images/icon-star.svg" alt=""><img src="images/icon-star.svg" alt=""><img
        src="images/icon-star.svg" alt=""></span>Rated 5 Stars in Reviews</div>
-    <div class="h4"><span class="star"><img src="images/icon-star.svg" alt=""><img src="images/icon-star.svg"
+    <div class="h4 two"><span class="star"><img src="images/icon-star.svg" alt=""><img src="images/icon-star.svg"
        alt=""><img src="images/icon-star.svg" alt=""><img src="images/icon-star.svg" alt=""><img
        src="images/icon-star.svg" alt=""></span>Rated 5 Stars in Report Guru</div>
-    <div class="h4"><span class="star"><img src="images/icon-star.svg" alt=""><img src="images/icon-star.svg"
+    <div class="h4 three"><span class="star"><img src="images/icon-star.svg" alt=""><img src="images/icon-star.svg"
        alt=""><img src="images/icon-star.svg" alt=""><img src="images/icon-star.svg" alt=""><img
        src="images/icon-star.svg" alt=""></span>Rated 5 Stars in BestTech</div>
    </div>
-   <div class="row-2">
-
-    <div class="col-3">
-     <div class="profile">
-      <div class="img-wrap"><img src="images/image-colton.jpg" alt=""></div>
-      <span>
-       <h4>Colton Smith</h4>
-       Verified Buyer
-      </span>
-     </div>
-     <p>
-      "We needed the same printed design as the one we had ordered a week prior.
-      Not only did they find the original order, but we also received it in time.
-      Excellent!"
-     </p>
+  </div>
+  <div class="row-2">
+   <div class="col-3 one">
+    <div class="profile">
+     <div class="img-wrap"><img src="images/image-colton.jpg" alt=""></div>
+     <span>
+      <h4>Colton Smith</h4>
+      Verified Buyer
+     </span>
     </div>
-
-    <div class="col-4">
-     <div class="profile">
-      <div class="img-wrap"><img src="images/image-irene.jpg" alt=""></div>
-      <span>
-       <h4>Irene Roberts</h4>
-       Verified Buyer
-      </span>
-     </div>
-     <p>
-      "Customer service is always excellent and very quick turn around. Completely
-      delighted with the simplicity of the purchase and the speed of delivery."
-     </p>
+    <p>
+     "We needed the same printed design as the one we had ordered a week prior.
+     Not only did they find the original order, but we also received it in time.
+     Excellent!"
+    </p>
+   </div>
+   <div class="col-4 two">
+    <div class="profile">
+     <div class="img-wrap"><img src="images/image-irene.jpg" alt=""></div>
+     <span>
+      <h4>Irene Roberts</h4>
+      Verified Buyer
+     </span>
     </div>
-
-    <div class="col-5">
-     <div class="profile">
-      <div class="img-wrap"><img src="images/image-anne.jpg" alt=""></div>
-      <span>
-       <h4>Anne Wallace</h4>
-       Verified Buyer
-      </span>
-     </div>
-     <p>
-      "Put an order with this company and can only praise them for the very high
-      standard. Will definitely use them again and recommend them to everyone!"
-     </p>
+    <p>
+     "Customer service is always excellent and very quick turn around. Completely
+     delighted with the simplicity of the purchase and the speed of delivery."
+    </p>
+   </div>
+   <div class="col-5 three">
+    <div class="profile">
+     <div class="img-wrap"><img src="images/image-anne.jpg" alt=""></div>
+     <span>
+      <h4>Anne Wallace</h4>
+      Verified Buyer
+     </span>
     </div>
+    <p>
+     "Put an order with this company and can only praise them for the very high
+     standard. Will definitely use them again and recommend them to everyone!"
+    </p>
    </div>
   </div>
-
   <div class="attribution">
    Challenge by
-   <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Your
-    Name Here</a>.
+   <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a
+    href="#">Adrian Salitico</a>.
   </div>
+ </div>
 </body>
 
 </html>
